--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -201,6 +201,7 @@
       &::before
         margin-bottom: 1.2rem
     &__input
+      color: $light
       font-size: 1.5rem
       &::placeholder
         color: $light
