--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -72,7 +72,7 @@
     &--center
       justify-content: center
   
-.invalid
+div.invalid
     color: #bf2121
     font-family: 'FuturaDemiC', sans-serif
     font-style: normal
