--- a/src/sass/templates/_footer.sass
+++ b/src/sass/templates/_footer.sass
@@ -44,3 +44,26 @@
   &__menu
     background-color: $dark
     padding: 4.285rem 0
+  &__map
+    min-height: 465px
+    max-width: 925px
+    margin-bottom: 4rem
+  &__text
+    max-width: 32rem
+    margin: auto
+    margin-bottom: 1.7rem
+    text-align: center
+    &__description
+    font-family: 'Yeseva One', cursive
+    font-size: 1rem
+    font-style: normal
+    font-weight: normal
+    color: $primary
+    text-transform: uppercase
+    line-height: 2rem
+    letter-spacing: -0.06em
+  &__img
+    text-align: center
+    margin-bottom: 2.7rem
+    &--icon
+      margin-right: 11px
