--- a/src/sass/templates/_control.sass
+++ b/src/sass/templates/_control.sass
@@ -48,6 +48,7 @@
     margin-bottom: -2px
   &__button
     padding: 1.2857rem 4.785rem
+    height: 3.8rem
   &__input
     color: $dark
   &__input-group
