--- a/src/sass/templates/_footer.sass
+++ b/src/sass/templates/_footer.sass
@@ -75,5 +75,14 @@
       margin-right: 11px
   &__ymap
     &--container
-      display: flex
-      justify-content: center
+      position: relative
+      margin: 0 auto 4rem auto
+      max-width: 925px
+      max-height: 465px
+      width: 100%
+      height: 100%
+      overflow: hidden
+      cursor: pointer
+      /*background: url("../img/footer/footer__ymap.jpg") #ffffff no-repeat
+      background-position: center center
+      box-shadow: 0 0 2em 0 rgba(0, 0, 0, 0.2)*/
