--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -248,11 +248,38 @@
     &__button
       font-size: 1.25rem
       padding: 1.55rem 0
+    &__text
+      max-width: 27rem
+      margin-bottom: 2rem
+      &__description
+        letter-spacing: -0.04rem
+    &__img
+      display: flex
+      justify-content: space-around
+      margin: auto
+      max-width: 120px
+      &--icon
+        width: 37px
+      &--mail
+    &__ymap--container
+      margin-bottom: 3.5rem
+    &__header
+      display: none
+      margin-bottom: 0
+      padding-bottom: 35px
+      &--second
+        display: block
+    &__map
+      width: 340px
+      height: 255px
+    &__menu
+      display: none
   .policy
     &__label
       &--left
         justify-content: left
         font-size: 1.333rem
+
       
 @media screen and ( max-height: 530px )
   .hero
