--- a/src/sass/templates/_footer.sass
+++ b/src/sass/templates/_footer.sass
@@ -44,15 +44,15 @@
   &__menu
     background-color: $dark
     padding: 4.285rem 0
-  &__map
-    min-height: 465px
-    max-width: 925px
-    margin-bottom: 4rem
+  &__header
+    text-align: center
+    margin-bottom: 2.7rem
+    &--second
+      display: none
   &__text
     max-width: 33rem
     margin: auto
     margin-bottom: 1.7rem
-    text-align: center
     &__description
       font-family: 'Yeseva One', cursive
       font-size: 1.6rem
@@ -69,20 +69,20 @@
       &:hover
         color: $light
   &__img
-    text-align: center
-    margin-bottom: 2.7rem
     &--icon
-      margin-right: 11px
+    &--mail
+      margin-right: 10px
+    &--instagram
+      margin-right: 10px
+  &__map
+    height: 465px
   &__ymap
     &--container
       position: relative
       margin: 0 auto 4rem auto
       max-width: 925px
-      max-height: 465px
-      width: 100%
-      height: 100%
       overflow: hidden
       cursor: pointer
-      /*background: url("../img/footer/footer__ymap.jpg") #ffffff no-repeat
+      background: url("../img/footer/footer__ymap.jpg") #ffffff no-repeat
       background-position: center center
-      box-shadow: 0 0 2em 0 rgba(0, 0, 0, 0.2)*/
+      box-shadow: 0 0 2em 0 rgba($dark, 0.2)
