add thanks modal

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1010,6 +1010,49 @@ img {
     align-self: flex-end;
     padding: 1.25rem 3.2rem 1.25rem 3.2rem; }
 
+.thanks {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  z-index: 199;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(19, 19, 19, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .thanks--visible {
+    opacity: 1;
+    visibility: visible; }
+  .thanks__dialog {
+    position: relative;
+    max-width: 36.142rem;
+    max-height: 40rem;
+    background: #131313;
+    padding: 2.357rem 3.5rem 1.928rem 3.5rem;
+    background: #131313 url("../img/bg-lines.png") no-repeat center;
+    color: #ffffff; }
+  .thanks__close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 28px;
+    height: 28px;
+    background: transparent url("../img/close.svg") no-repeat center;
+    border: none;
+    margin: 12px;
+    cursor: pointer; }
+  .thanks__title {
+    font-family: 'Yeseva One', cursive;
+    font-size: 1.357rem;
+    line-height: 1.857rem;
+    text-align: center;
+    margin: 0;
+    margin-bottom: 2rem; }
+
 .projects {
   padding-bottom: 30rem; }
   .projects--image {
