--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -11,6 +11,7 @@
 @import 'templates/design'
 @import 'templates/footer'
 @import 'templates/modal'
+@import 'templates/thanks'
 @import 'templates/projects'
 
 @import 'media'
