--- a/src/sass/templates/_modal.sass
+++ b/src/sass/templates/_modal.sass
@@ -54,10 +54,11 @@
     /*&:last-of-type
       margin-bottom: 1rem*/
   &__policy
-    margin-bottom: 2.7rem
+    //margin-bottom: 2.7rem
   .policy__label
     font-size: 1.142rem
       
   &__button
+    margin-top: 2.7rem
     align-self: flex-end
     padding: 1.25rem 3.2rem 1.25rem 3.2rem
